[package]
name = "raven"
version = "0.1.0"
edition = "2021"
authors = ["Kurtis Dinelle <kurtisdinelle@gmail.com>"]

[dependencies]
arbitrary-int = "1.2.7"
bitbybit = "1.3.2"

[dependencies.softfloat-wrapper]
version = "0.3.4"
default-features = false
features = ["riscv"]

[dev-dependencies]
rstest = "0.23.0"
